--- a/src/image-view.html
+++ b/src/image-view.html
@@ -200,7 +200,7 @@ My title title title title title title title title title title title title title
                       </form>
 
                       <div class="js-tags__list tags__list">
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Tag
                           <object type="no/suchtype">
                             <button
@@ -213,7 +213,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Some tag
                           <object type="no/suchtype">
                             <button
@@ -226,7 +226,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Another tag
                           <object type="no/suchtype">
                             <button
@@ -239,7 +239,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Tag
                           <object type="no/suchtype">
                             <button
@@ -252,7 +252,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           My test tag
                           <object type="no/suchtype">
                             <button
@@ -265,7 +265,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Tag
                           <object type="no/suchtype">
                             <button
@@ -279,7 +279,7 @@ My title title title title title title title title title title title title title
                           </object>
                         </a>
 
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Sometagometagometagometagometagometagometagometagometagometagometagometagometagometagometagometag
                           <object type="no/suchtype">
                             <button
@@ -292,7 +292,7 @@ My title title title title title title title title title title title title title
                             </button>
                           </object>
                         </a>
-                        <a class="tags__tag tag btn btn-secondary" href="#">
+                        <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                           Some tag ometagomet agomet agometa etag
                           <object type="no/suchtype">
                             <button
