--- a/src/upload-view.html
+++ b/src/upload-view.html
@@ -177,7 +177,7 @@
                     </form>
 
                     <div class="js-tags__list tags__list">
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Tag
                         <object type="no/suchtype">
                           <button
@@ -190,7 +190,7 @@
                           </button>
                         </object>
                       </a>
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Some tag
                         <object type="no/suchtype">
                           <button
@@ -203,7 +203,7 @@
                           </button>
                         </object>
                       </a>
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Another tag
                         <object type="no/suchtype">
                           <button
@@ -216,7 +216,7 @@
                           </button>
                         </object>
                       </a>
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Tag
                         <object type="no/suchtype">
                           <button
@@ -229,7 +229,7 @@
                           </button>
                         </object>
                       </a>
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         My test tag
                         <object type="no/suchtype">
                           <button
@@ -242,7 +242,7 @@
                           </button>
                         </object>
                       </a>
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Tag
                         <object type="no/suchtype">
                           <button
@@ -256,7 +256,7 @@
                         </object>
                       </a>
 
-                      <a class="tags__tag tag btn btn-secondary" href="#">
+                      <a class="tags__tag tag tag_deletable btn btn-secondary" href="#">
                         Some tag ometagomet agomet agometa etag
                         <object type="no/suchtype">
                           <button
