--- a/src/image-view.html
+++ b/src/image-view.html
@@ -360,7 +360,7 @@ My title title title title title title title title title title title title title
               <div class="toolbar__specific-actions-list">
                 <input
                   type="checkbox"
-                  class="toolbar__specific-actions-toggle btn-check"
+                  class="toolbar__specific-actions-toggle toggler btn-check"
                   id="toolbar__specific-actions-toggle"
                   autocomplete="off"
                 />
@@ -374,7 +374,7 @@ My title title title title title title title title title title title title title
                     width="24"
                     height="24"
                     fill="currentColor"
-                    class="toolbar__specific-actions-toggle-icon-open bi bi-three-dots-vertical"
+                    class="toggler__icon-open bi bi-three-dots-vertical"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -386,7 +386,7 @@ My title title title title title title title title title title title title title
                     width="24"
                     height="24"
                     fill="currentColor"
-                    class="toolbar__specific-actions-toggle-icon-close bi bi-x"
+                    class="toggler__icon-close bi bi-x"
                     viewBox="0 0 16 16"
                   >
                     <path
