--- a/src/upload-view.html
+++ b/src/upload-view.html
@@ -490,7 +490,22 @@
     </div>
 
     <datalist id="tag-list">
-      <option value="Default tag"></option>
+      <!-- preloaded minimal list -->
+      <option value="San Francisco"></option>
+      <option value="New York"></option>
+      <option value="Seattle"></option>
+      <option value="Los Angeles"></option>
+      <option value="Chicago"></option>
+      <option value="Dallas"></option>
+      <option value="San Diego"></option>
+      <option value="San Antonio"></option>
+      <option value="Memphis"></option>
+      <option value="Aurora"></option>
+      <option value="Anaheim"></option>
+      <option value="Cleveland"></option>
+      <option value="Bakersfield"></option>
+      <option value="Wichita"></option>
+      <option value="Toledo"></option>
     </datalist>
 
 
