--- a/src/trash.html
+++ b/src/trash.html
@@ -303,10 +303,7 @@
         </aside>
         <div class="sidebar-backdrop"></div>
         <main class="main">
-          <div class="mb-3">
-            <button type="button" class="btn btn-lg btn-outline-danger">Delete all items</button>
-            <a class="fs-2 fw-light" onclick="document.querySelector('.js-selected-toolbar').classList.toggle('is-visible');" href="#">toggle header</a>
-          </div>
+          <h2 class="fw-light mb-4">Items in trash <button type="button" class="btn btn-outline-danger">Delete all</button>, <a class="fs-2 fw-light" onclick="document.querySelector('.js-selected-toolbar').classList.toggle('is-visible');" href="#">toggle header</a></h2>
           <div id="pig" class="gallery mb-4"></div>
           <button type="button" class="btn btn-lg btn-primary">Load more</button>
         </main>
