--- a/src/upload-view.html
+++ b/src/upload-view.html
@@ -80,7 +80,10 @@
         </div>
       </div>
       <div class="content">
-        <h2 class="fw-light mb-5">Uploading 3 pictures, please take a moment to add details, or keep using a site.</h2>
+        <h2 class="fw-light mb-5">
+          Uploading 3 pictures, please take a moment to add details, or keep using a site
+          <button type="button" class="btn btn-outline-danger">Cancel upload</button>
+        </h2>
         <div class="upload-manager">
           <ul class="mb-5 upload-manager__files file-list nolist">
             <li class="file-list__item">
@@ -455,9 +458,6 @@
               </div>
             </li>
           </ul>
-          <div class="upload-manager__footer">
-            <button type="button" class="me-2 mb-3 btn btn-lg btn-outline-danger">Cancel upload</button>
-          </div>
         </div>
       </div>
     </div>
