Add suggestions thumbs

--- a/src/tags.html
+++ b/src/tags.html
@@ -111,7 +111,10 @@
                       tabindex="-1"
                       class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
                     >
-                      Suggestion 1
+                      <img class="search__suggest-item-thumb" src="http://placekitten.com/47/47" alt="">
+                      <span class="search__suggest-item-thumb-txt">
+                        Suggestion 1
+                      </span>
                     </a>
                     <a
                       data-suggestion-id="2"
@@ -119,7 +122,10 @@
                       tabindex="-1"
                       class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
                     >
-                      Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion
+                      <img class="search__suggest-item-thumb" src="http://placekitten.com/47/47" alt="">
+                      <span class="search__suggest-item-thumb-txt">
+                        Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion
+                      </span>
                     </a>
                     <a
                       data-suggestion-id="3"
@@ -127,7 +133,10 @@
                       tabindex="-1"
                       class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
                     >
-                      Suggestion 2
+                      <img class="search__suggest-item-thumb" src="http://placekitten.com/47/47" alt="">
+                      <span class="search__suggest-item-thumb-txt">
+                        Suggestion 2
+                      </span>
                     </a>
                     <a
                       data-suggestion-id="4"
@@ -135,7 +144,10 @@
                       tabindex="-1"
                       class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
                     >
-                      Suggestion 4
+                      <img class="search__suggest-item-thumb" src="http://placekitten.com/47/47" alt="">
+                      <span class="search__suggest-item-thumb-txt">
+                        Suggestion 4
+                      </span>
                     </a>
                     <a
                       data-suggestion-id="5"
@@ -143,7 +155,10 @@
                       tabindex="-1"
                       class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
                     >
-                      Suggestion 5
+                      <img class="search__suggest-item-thumb" src="http://placekitten.com/47/47" alt="">
+                      <span class="search__suggest-item-thumb-txt">
+                        Suggestion 5
+                      </span>
                     </a>
                   </div>
                 </div>
